{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 87,
  "lineage": "d6bfb5f0-708f-d418-0d14-f6ef2ed17569",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-18T19:22:39.275-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-499319/global/firewalls/terraform-lab-allow-ssh",
            "log_config": [],
            "name": "terraform-lab-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-499319/global/networks/myvcn",
            "params": [],
            "priority": 1000,
            "project": "terraform-499319",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-499319/global/firewalls/terraform-lab-allow-ssh",
            "source_ranges": [
              "108.214.44.158/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "terraform-lab"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.myvcn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "lab_allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8080",
                  "8072",
                  "3001"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-18T19:22:39.532-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-499319/global/firewalls/terraform-lab-allow-web",
            "log_config": [],
            "name": "terraform-lab-allow-web",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-499319/global/networks/myvcn",
            "params": [],
            "priority": 1000,
            "project": "terraform-499319",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-499319/global/firewalls/terraform-lab-allow-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "terraform-lab"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.myvcn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "lab_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SECURE_BOOT",
                  "GVNIC",
                  "IDPF"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/oracle-linux-cloud/global/images/oracle-linux-9-v20260513",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-499319/zones/us-east1-c/disks/terraform-lab-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-06-18T19:22:51.318-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/terraform-499319/zones/us-east1-c/instances/terraform-lab-vm",
            "instance_id": "5364978303983229204",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "C0mTiQeyhuQ=",
            "metadata_startup_script": "#!/usr/bin/bash\r\n\r\ndnf install -y dnf-plugins-core git curl\r\n\r\ndnf config-manager --add-repo https://download.docker.com/linux/rhel/docker-ce.repo\r\n\r\ndnf install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin\r\n\r\nsystemctl enable --now docker\r\n\r\nrm -rf /opt/lab\r\ngit clone https://github.com/j0bert95/joelslab.git /opt/lab\r\n\r\ncat \u003e /etc/systemd/system/joelslab-compose.service \u003c\u003c'EOF [...]
            "name": "terraform-lab-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.26.76.204",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-499319/global/networks/myvcn",
                "network_ip": "10.10.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-499319/regions/us-east1/subnetworks/subad1",
                "subnetwork_project": "terraform-499319"
              }
            ],
            "project": "terraform-499319",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-499319/zones/us-east1-c/instances/terraform-lab-vm",
            "service_account": [
              {
                "email": "724071097996-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "terraform-lab"
            ],
            "tags_fingerprint": "iNKVM6h--6A=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-east1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.myvcn",
            "google_compute_subnetwork.subad1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "myvcn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-499319/global/networks/myvcn",
            "mtu": 0,
            "name": "myvcn",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "737323399580817696",
            "numeric_id": "737323399580817696",
            "project": "terraform-499319",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-499319/global/networks/myvcn"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subad1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-18T19:22:39.332-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.10.1.1",
            "id": "projects/terraform-499319/regions/us-east1/subnetworks/subad1",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "subad1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-499319/global/networks/myvcn",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-499319",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-499319/regions/us-east1/subnetworks/subad1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 4713484842385873152
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.myvcn"
          ]
        }
      ]
    }
  ]
}